syntax = "proto3";

// java 基础的包和类名设置
option java_outer_classname = "UserService";
option java_package = "com.rpc.grpc";
option java_multiple_files = false;

message UserInfo {
  int32 userInfoId = 1;
  string username = 2;
}

message UserInfoResponse {
  message UserInfoRole {
    int32 roleId = 1;
    string roleName = 2;
  }
  int32 userInfoId = 1;
  string username = 2;
  repeated UserInfoRole userInfoRole = 3;
}

service UserInfoService {
  rpc getUserInfo(UserInfo) returns(UserInfoResponse) {}
}